--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "lets-go-api",
+  "version": "0.0.1",
+  "description": "An API for Let's Go",
+  "author": "Duncan Grubbs",
   "main": "server.js",
   "scripts": {
-    "start": "node ./app/server.js",
-    "test": "mocha"
+    "start": "nodemon --exec babel-node app.js",
+    "test": "mocha --require babel-register tests/*.js --exit"
   },
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
-    "nodemon": "^1.18.10",
-    "supertest": "^3.4.2"
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
