--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "crypto": "^1.0.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
