--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "mocha --require babel-register tests/*.js --exit"
+    "test": "mocha --require babel-register tests/*.js --exit",
+    "lint": "eslint -o ./tests/lint-report.html -f html *"
   },
   "license": "ISC",
   "dependencies": {
@@ -15,7 +16,6 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "crypto": "^1.0.1",
-    "eslint-config-airbnb-base": "^13.1.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
   }
 }
