--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "mocha --require babel-register tests/*.js --exit",
+    "test": "nyc mocha --require babel-register tests/*.js --exit",
     "lint": "eslint -o ./tests/lint-report.html -f html *"
   },
   "license": "ISC",
@@ -20,6 +20,7 @@
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
     "nodemon": "^1.18.10",
+    "nyc": "^13.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
