--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "coveralls": "^3.0.3",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.4.13",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
-    "nyc": "^13.3.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "nyc": "^13.3.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
