--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "The API for Let's Go",
   "author": "Duncan Grubbs",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "nyc --reporter=html mocha --require babel-register tests/*.js --exit",
+    "test": "nyc --reporter=html mocha --require babel-register tests/**/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint -o ./tests/lint-report.html -f html *"
   },
@@ -19,6 +19,7 @@
     "chai-http": "^4.2.1",
     "coveralls": "^3.0.3",
     "crypto": "^1.0.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
