--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
-    "test": "nyc --reporter=html mocha --require babel-register ./tests/*.js --exit",
+    "test": "nyc --reporter=html mocha --require babel-register --recursive tests --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint -o ./tests/lint-report.html -f html *"
   },
