Add better standards for testing endpoint responses, fix linting command.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon --exec babel-node app.js",
     "test": "mocha --require babel-register --recursive tests --exit",
     "coverage": "nyc report",
-    "lint": "eslint -o ./tests/lint-report.html -f html *"
+    "lint": "eslint . -o ./tests/lint-report.html -f html"
   },
   "license": "ISC",
   "dependencies": {
