--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "nodemon --exec babel-node app.js",
     "test": "mocha --require babel-register --recursive tests --exit",
-    "coverage": "nyc report --reporter=lcov mocha --require babel-register --recursive tests --exit",
+    "coverage": "nyc -r lcov yarn test",
     "lint": "eslint . -o ./tests/lint-report.html -f html"
   },
   "license": "ISC",
@@ -17,17 +17,16 @@
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
-    "coveralls": "^3.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
-    "mocha": "^5.2.0",
+    "mocha": "7.1.2",
     "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.10",
-    "nyc": "^13.3.0"
+    "nodemon": "2.0.4",
+    "nyc": "15.0.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
